# tele_stocker

./: .gitignore  Cargo.toml  README.md
stocker_traits/: Cargo.toml
stocker_traits/src/: lib.rs
stocker_traits_derive/: Cargo.toml
stocker_traits_derive/src/: lib.rs
teleStocker/: .env  Cargo.toml
teleStocker/src/: main.rs  stocks.rs
