[package]
name = "teleStocker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# 3rd
teloxide = { version = "0.11", features = ["macros", "webhooks-axum"] } 
log = "0.4" 
pretty_env_logger = "0.4" 
tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] } 
nanoid = "0.4"
rand = "0.8.3"
reqwest = "0.11.14"
serde = "1.0.152"
serde_json = "1.0.91"
# project
stocker_traits = { path = "../stocker_traits"}
stocker_traits_derive = { path = "../stocker_traits_derive"}
